--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                                id="carNumber" 
                                name="entry.1799002231" 
                                required 
-                               placeholder="30아1234"
+                               placeholder="예시 : 30아1234"
                                maxlength="7">
                     </div>
                 </div>
@@ -460,4 +460,5 @@
     </script>
 </body>
 </html>
+
 
