--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ target="hidden_iframe">
         <div class="button-group">
             <button type="button" id="nextBtn" onclick="nextStep(1)">다음 단계로</button>
         </div>
-      </div>
+    </div>
 </div>
 
 <div class="step" id="step2">
@@ -717,44 +717,50 @@ toggleSelectArrow(this);
 checkCompletion(this);
 });
 
+// ************************************************************
+// ✅ 수정된 SUBMIT 이벤트 리스너 (데이터 누락 방지 로직)
+// ************************************************************
 document.getElementById('carForm').addEventListener('submit', function(event) {
-    // 🚀 1. 유효성 검사 실행 (1단계 가격 검사)
-    if (!validateStep1(true)) {
-        updateStep(1); // 1단계로 돌아감
-        alert('1단계 희망가격을 먼저 정확히 입력해주세요.');
-        event.preventDefault();
-        return;
-    }
+    // 1. 폼의 기본 제출 동작을 즉시 막습니다.
+    event.preventDefault(); 
 
-    // 🚀 2. 유효성 검사 실행 (2단계 연락처/차량번호/동의 검사)
-    if (!validateStep2(true)) {
-        updateStep(2); // 2단계로 돌아감
-        // Alert은 validateStep2 내부에서 처리됨
-        event.preventDefault();
-        return;
-    }
+    // 🚀 2. 1단계 유효성 검사
+    if (!validateStep1(true)) {
+        updateStep(1); // 1단계로 돌아감
+        alert('1단계 희망가격을 먼저 정확히 입력해주세요.');
+        return;
+    }
 
+    // 🚀 3. 2단계 유효성 검사
+    if (!validateStep2(true)) {
+        updateStep(2); // 2단계로 돌아감
+        // Alert은 validateStep2 내부에서 처리됨
+        return;
+    }
 
-    // 🚀 3. 모든 검사 통과 후, 전송 직전에 Hidden 필드에 최종 값 설정
-    // 3-1. 희망가격 Hidden 필드 값 설정 (1억 [숫자]만원 형식)
-    licensePriceHidden.value = `1억 ${licensePriceInput.value.trim()}만원`;
+    // 🚀 4. 모든 검사 통과 후, 전송 직전에 Hidden 필드에 최종 값 설정
+    
+    // 4-1. 희망가격 Hidden 필드 값 설정 (1억 [숫자]만원 형식)
+    licensePriceHidden.value = `1억 ${licensePriceInput.value.trim()}만원`;
 
-    // 3-2. 차량번호 Hidden 필드 값 설정 (서울[2자리][한글][4자리] 형식)
-    const part1Value = carNumPart1.value.trim();
-    const part2Value = carNumPart2.value.trim();
-    const hangulValue = carHangulSelect.value;
-    carNumberHidden.value = `서울${part1Value}${hangulValue}${part2Value}`;
+    // 4-2. 차량번호 Hidden 필드 값 설정 (서울[2자리][한글][4자리] 형식)
+    const part1Value = carNumPart1.value.trim();
+    const part2Value = carNumPart2.value.trim();
+    const hangulValue = carHangulSelect.value;
+    carNumberHidden.value = `서울${part1Value}${hangulValue}${part2Value}`;
 
-    // 3-3. 전화번호 Hidden 필드 값 설정 (010-[4자리]-[4자리] 형식)
-    const phoneValue = phoneInput.value.replace(/[^0-9]/g, '');
-    phoneHidden.value = '010-' + phoneValue.slice(0, 4) + '-' + phoneValue.slice(4);
+    // 4-3. 전화번호 Hidden 필드 값 설정 (010-[4자리]-[4자리] 형식)
+    const phoneValue = phoneInput.value.replace(/[^0-9]/g, '');
+    phoneHidden.value = '010-' + phoneValue.slice(0, 4) + '-' + phoneValue.slice(4);
 
-    // 3-4. 개인정보 동의 Hidden 필드 값 설정
-    consentHidden.value = consentCheckbox.checked ? '예' : '아니오';
-    
-    // 4. 최종 제출
-    submitted = true; // 제출 시작 플래그 설정
+    // 4-4. 개인정보 동의 Hidden 필드 값 설정
+    consentHidden.value = consentCheckbox.checked ? '예' : '아니오';
+    
+    // 5. 최종 제출 플래그 설정 후, 폼을 명시적으로 제출합니다.
+    submitted = true; 
+    this.submit(); // 폼을 명시적으로 재전송 (Hidden Field에 값이 확실히 채워진 후)
 });
+
 
 function updateStep(step) {
 currentStep = step;
