--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ target="hidden_iframe">
             <div class="input-field-wrapper">
                 <input type="text"
                     id="name"
-                                        name="entry.404085379" 
+                    name="entry.404085379" 
                     required
                     placeholder="성함 입력" class="data-input-field">
             </div>
@@ -718,7 +718,7 @@ checkCompletion(this);
 });
 
 // ************************************************************
-// ✅ 수정된 SUBMIT 이벤트 리스너 (데이터 누락 방지 로직 최종 적용)
+// ✅ 최종 연동이 확인된 SUBMIT 이벤트 리스너 (데이터 누락 방지 로직 유지)
 // ************************************************************
 document.getElementById('carForm').addEventListener('submit', function(event) {
     // 1. 폼의 기본 제출 동작을 즉시 막습니다.
