--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ margin-bottom: 0;
 #nextBtn, #submitBtn { 
     flex-grow: 1; 
     padding: 18px 20px; 
-    background-color: var(--main-color); /* ✅ 파란색 버튼 색상 복원 */
+    background-color: var(--main-color) !important; /* ✅ 파란색 버튼 색상 강제 적용 */
     color: white; 
     border: none; 
     border-radius: 10px; 
