--- a/index.html
+++ b/index.html
@@ -9,29 +9,30 @@
 @import url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquare.woff');
 
 /* ************************************************************ */
-/* ✅ 상수 정의 - 이미지 속 색상(노란색/파란색)으로 복원 */
+/* ✅ 상수 정의 */
 :root {
 --input-gap: 5px;
 --input-padding-vertical: 12px;
 --mobile-breakpoint: 600px;
+/* 입력 그룹 하단 마진 재조정 (항목 간 간격 35px로 유지) */
 --input-margin-bottom: 35px; 
 
-/* --- 🎨 Theme Colors --- (이미지 색상으로 복원) */
---main-color: #5C7FB7; /* 버튼 주 색상 */
+/* --- 🎨 Theme Colors --- */
+--main-color: #1976D2;
 --light-border-color: #BBDEFB;
 --text-color: #333;
 --secondary-text-color: #6D4C41;
---label-color: #0D47A1; /* 라벨 텍스트 색상 */
+--label-color: #0D47A1;
 --placeholder-color: #9E9E9E;
 --input-border: #90CAF9;
 --unit-bg-color: white;
 --unit-text-color: #333;
---car-unit-bg: #648DD7; /* 차량 단위 버튼 배경 (이미지 톤에 맞춤) */
+--car-unit-bg: #42A5F5;
 --car-unit-text: #FFFFFF;
 --unified-input-border: 1px solid var(--input-border);
 --content-padding: 20px;
 
-/* 미완료/대기 상태 배경색 (이미지 속 노란색) */
+/* 미완료/대기 상태 배경색 (노란색 계열 유지) */
 --input-default-bg: #FFF9C4;
 /* 완료/입력 상태 배경색 (흰색) */
 --input-filled-bg: white;
@@ -39,18 +40,23 @@
 --base-field-height: 50px;
 --label-height: 25px;
 
+/* 항목 이름 폰트 크기 확대 */
 --label-font-size: 1.15em;
 --base-font-size: 0.95em;
 --input-text-font-weight: 600;
 --label-font-weight: 700;
 
+/* 신규 추가: 시세 알림 버튼용 색상 */
 --accent-color: #FFEB3B;
+/* 신규 추가: 가격 입력 필드용 색상 */
 --price-input-border: #E0E0E0;
 
+/* 희망가격 텍스트 폰트 사이즈 (1억, 만원) */
 --price-text-font-size: 1.2em;
 
---focus-font-size: 1.25em; 
---focus-padding: 18px 10px; 
+/* 돋보기 효과 상수 */
+--focus-font-size: 1.25em; /* 확대될 폰트 크기 */
+--focus-padding: 18px 10px; /* 포커스 시 패딩 */
 }
 /* ************************************************************ */
 /* 기본 설정 */
@@ -64,33 +70,24 @@ min-height: 10vh;
 margin: 0;
 padding: 15px 10px;
 box-sizing: border-box;
-background-color: #EFEBE9; /* 기존 배경색 유지 */
+background-color: #EFEBE9;
 overflow-y: auto;
 }
-.container { 
-    background-color: rgba(255, 255, 255, 0.95); 
-    padding: 0; 
-    border-radius: 15px; 
-    width: 100%; 
-    max-width: 500px; 
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1); 
-    border: 2px solid var(--light-border-color); 
-    overflow: hidden; 
-}
+.container { background-color: rgba(255, 255, 255, 0.95); padding: 0; border-radius: 15px; width: 100%; max-width: 500px; box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1); border: 2px solid var(--light-border-color); overflow: hidden; }
 .header-content { padding: 25px var(--content-padding) 10px; }
 h1 {
 text-align: center;
 margin-bottom: 10px;
 font-size: 1.5em;
 font-weight: 800;
-color: var(--label-color); /* 진한 파란색 */
+color: var(--main-color);
 line-height: 1.2;
 }
 /* ✅ 설명 문구 색상 변경 */
 .description {
 text-align: center;
 font-size: 1.0em;
-color: red; 
+color: red; /* 빨간색으로 변경 */
 margin-bottom: 25px;
 padding: 0 5px;
 font-weight: 600;
@@ -98,23 +95,9 @@ line-height: 1.5;
 }
 .step { display: none; }
 .step.active { display: block; }
-/* 스텝 콘텐츠 배경색 */
-.step-content { 
-    padding: 20px var(--content-padding); 
-    margin: 0 var(--content-padding) 20px var(--content-padding); 
-    border-radius: 10px; 
-    border: 1px solid var(--input-border); 
-    background-color: #F8F8F8; /* 이미지 속 섹션 배경색에 맞춤 */
-}
-/* 섹션 제목 보더 색상 */
-.section-title { 
-    font-size: 1.2em; 
-    font-weight: 800; 
-    color: var(--label-color); 
-    margin-bottom: 25px; 
-    padding-bottom: 5px; 
-    border-bottom: 1px dashed #BDBDBD;
-}
+.step-content { padding: 20px var(--content-padding); margin: 0 var(--content-padding) 20px var(--content-padding); border-radius: 10px; border: 1px solid var(--input-border); background-color: #F8F8F8; }
+/* 🔴 수정된 부분: "2단계 : 연락정보 입력" */
+.section-title { font-size: 1.2em; font-weight: 800; color: var(--label-color); margin-bottom: 25px; padding-bottom: 5px; border-bottom: 1px dashed #BDBDBD; }
 
 /* ----------------------------------- */
 /* 일반 입력 필드 스타일 (돋보기 효과 유지) */
@@ -122,6 +105,7 @@ line-height: 1.5;
 .input-group {
 display: flex;
 flex-wrap: wrap;
+/* 상수 적용 */
 margin-bottom: var(--input-margin-bottom);
 position: relative;
 align-items: center;
@@ -129,6 +113,7 @@ align-items: center;
 .input-group label {
 width: 100px;
 flex-shrink: 0;
+/* 폰트 크기 확대 */
 font-size: var(--label-font-size);
 font-weight: var(--label-font-weight);
 color: var(--label-color);
@@ -148,15 +133,19 @@ flex-grow: 1;
 .input-group.stack-label-group {
 flex-direction: column;
 align-items: flex-start;
+/* 하단 마진 증가 */
 margin-bottom: var(--input-margin-bottom);
 }
 .input-group.stack-label-group label {
 width: 100%;
+/* 라벨 높이 */
 height: var(--label-height); 
+/* ✅ 라벨과 입력 필드 간격 확대 (15px로 유지) */
 margin-bottom: 15px; 
 align-items: center;
 text-align: center;
 padding: 0;
+/* 폰트 크기 확대 */
 font-size: var(--label-font-size);
 }
 .input-group.stack-label-group .input-field-wrapper {
@@ -180,7 +169,7 @@ color: var(--text-color);
 appearance: none;
 min-width: 0;
 text-align: center;
-background-color: var(--input-default-bg); /* 노란색 */
+background-color: var(--input-default-bg);
 transition: background-color 0.3s, font-size 0.3s, padding 0.3s;
 }
 
@@ -204,7 +193,7 @@ padding: var(--focus-padding) !important;
 height: calc(var(--base-field-height) + 10px) !important; /* 높이 약간 확대 */
 line-height: calc(var(--base-field-height) + 10px) !important;
 font-weight: 800 !important;
-box-shadow: 0 0 10px rgba(13, 71, 161, 0.5); /* 라벨 색상에 맞춰 쉐도우 색상 변경 */
+box-shadow: 0 0 10px rgba(25, 118, 210, 0.5); /* 쉐도우 추가 */
 background-color: var(--input-default-bg) !important;
 }
 
@@ -212,11 +201,12 @@ background-color: var(--input-default-bg) !important;
 .data-input-field.completed,
 .select-field.completed {
 background-color: var(--input-filled-bg) !important;
+/* 1억 텍스트와 동일한 폰트 사이즈 적용 */
 font-size: var(--price-text-font-size) !important;
 padding: 0 10px !important;
 height: var(--base-field-height) !important;
 line-height: var(--base-field-height) !important;
-font-weight: 800 !important;
+font-weight: 800 !important; /* 볼드하게 유지 */
 }
 
 /* Select Box 드롭다운 아이콘 설정 */
@@ -252,7 +242,7 @@ outline: none;
 box-shadow: none;
 min-width: 100px;
 line-height: var(--base-field-height);
-background-color: var(--input-default-bg) !important; /* 노란색 */
+background-color: var(--input-default-bg) !important;
 }
 /* 전화번호 입력 필드 포커스 시 돋보기 효과 재적용 */
 .split-unit-wrapper input:focus {
@@ -271,7 +261,7 @@ font-weight: 800;
 flex-shrink: 0;
 padding: 0 10px;
 color: var(--car-unit-text);
-background-color: var(--car-unit-bg); /* 진한 파란색 */
+background-color: var(--car-unit-bg);
 font-size: var(--label-font-size);
 border-right: 1px solid var(--input-border);
 }
@@ -285,7 +275,7 @@ width: 100%;
 height: var(--base-field-height);
 }
 .car-number-split-wrapper .fixed-unit-button {
-background-color: var(--car-unit-bg); /* 진한 파란색 */
+background-color: var(--car-unit-bg);
 color: var(--car-unit-text);
 border: none;
 border-radius: 8px;
@@ -305,7 +295,7 @@ padding: 0 5px;
 text-align: center !important;
 line-height: var(--base-field-height);
 height: 100%;
-background-color: var(--input-default-bg); /* 노란색 */
+background-color: var(--input-default-bg);
 }
 #carNumPart1 { flex: 2; max-width: 80px; }
 #carNumPart2 { flex: 3; min-width: 90px; }
@@ -314,7 +304,6 @@ background-color: var(--input-default-bg); /* 노란색 */
 .car-number-split-wrapper .car-hangul-box select {
 text-align: left !important;
 padding-left: 10px !important;
-background-color: var(--input-default-bg); /* 노란색 */
 }
 
 /* 면허 판매 희망가격 관련 스타일 */
@@ -330,8 +319,7 @@ display: flex;
 align-items: center;
 height: var(--base-field-height);
 width: 100%;
-/* 데스크탑 뷰에서도 충분히 넓게 확보 */
-max-width: 350px; 
+max-width: 250px;
 border: none;
 border-radius: 0;
 overflow: hidden;
@@ -345,6 +333,7 @@ display: flex;
 align-items: center;
 justify-content: center;
 font-weight: 900;
+/* 1억 텍스트 폰트 크기 조정 */
 font-size: var(--price-text-font-size);
 color: black;
 background-color: transparent;
@@ -354,15 +343,14 @@ box-sizing: border-box;
 padding: 0 5px 0 0;
 }
 .unified-price-input input {
-/* 너비 비율을 늘려 공간 확보 */
-width: 40%; 
-flex-grow: 1; /* 가용 공간을 최대로 사용 */
-min-width: 100px; /* 데스크탑 최소 너비 확보 */
+width: 30%;
+flex-grow: 0;
+min-width: 40px;
 height: 100%;
 border: 1px solid var(--input-border);
 border-radius: 8px;
-background-color: var(--input-default-bg); /* 노란색 */
-padding: 0 10px; /* 패딩 조정 */
+background-color: var(--input-default-bg);
+padding: 0 3px;
 text-align: center;
 font-size: 1.2em;
 font-weight: 900;
@@ -370,18 +358,19 @@ box-sizing: border-box;
 }
 /* 가격 입력 필드 포커스 시 돋보기 효과 재적용 */
 .unified-price-input input:focus {
-font-size: var(--focus-font-size) !important;
-padding: var(--focus-padding) !important;
-height: calc(var(--base-field-height) + 10px) !important;
-line-height: calc(var(--base-field-height) + 10px) !important;
+font-size: 1.5em !important;
+padding: 0 3px !important;
+height: 100% !important;
+line-height: 100% !important;
 font-weight: 900 !important;
-box-shadow: 0 0 10px rgba(13, 71, 161, 0.5); /* 라벨 색상에 맞춰 쉐도우 색상 변경 */
+box-shadow: 0 0 10px rgba(25, 118, 210, 0.5); /* 쉐도우 추가 */
 background-color: var(--input-default-bg) !important;
 }
 
 /* 입력 완료 시 폰트 크기 조정 (희망가격 입력란) */
 .unified-price-input input.completed {
 background-color: var(--input-filled-bg) !important;
+/* 1억 텍스트와 동일하게 키움 */
 font-size: var(--price-text-font-size) !important;
 font-weight: 900 !important;
 }
@@ -393,6 +382,7 @@ display: flex;
 align-items: center;
 justify-content: center;
 font-weight: 900;
+/* 만원 텍스트 폰트 크기 조정 */
 font-size: var(--price-text-font-size);
 color: black;
 background-color: transparent;
@@ -450,14 +440,14 @@ margin-bottom: 0;
 /* --- ⬇️ 뒤로가기 버튼 스타일 ("뒤로" 텍스트 반영) ⬇️ --- */
 
 .prev-btn {
-    width: 80px; 
+    width: 80px; /* 버튼 너비 확장 */
     padding: 15px 10px;
-    background-color: #CFD8DC; /* 이미지 속 회색 버튼 톤 */
+    background-color: #CFD8DC;
     color: var(--text-color);
     border: none;
     border-radius: 10px;
-    font-weight: 800; 
-    font-size: 1.3em; 
+    font-weight: 800; /* 폰트 굵게 */
+    font-size: 1.3em; /* 폰트 크기 확대 */
     cursor: pointer;
     flex-shrink: 0;
     display: flex;
@@ -473,27 +463,14 @@ margin-bottom: 0;
 /* --- ⬆️ 뒤로가기 버튼 스타일 끝 ⬆️ --- */
 
 
-#nextBtn, #submitBtn { 
-    flex-grow: 1; 
-    padding: 18px 20px; 
-    background-color: var(--main-color) !important; /* ✅ 파란색 버튼 색상 강제 적용 */
-    color: white; 
-    border: none; 
-    border-radius: 10px; 
-    font-size: 1.3em; 
-    font-weight: 800; 
-    cursor: pointer; 
-    box-shadow: 0 4px 10px rgba(92, 127, 183, 0.5); 
-}
+#nextBtn, #submitBtn { flex-grow: 1; padding: 18px 20px; background-color: var(--main-color); color: white; border: none; border-radius: 10px; font-size: 1.3em; font-weight: 800; cursor: pointer; box-shadow: 0 4px 10px rgba(25, 118, 210, 0.4); }
 
-/* 모바일 반응형 디자인 */
+/* 모바일 반응형 디자인 (유지) */
 @media (max-width: var(--mobile-breakpoint)) {
-/* 세로 배열로 변경 */
 .input-group:not(.stack-label-group) { flex-direction: column; align-items: flex-start; }
 .input-group:not(.stack-label-group) label { width: 100%; margin-bottom: 5px; line-height: 1.2; height: auto; padding: 0; }
 .input-group:not(.stack-label-group) .input-field-wrapper { width: 100%; }
 
-/* 차량번호 입력 필드 최적화 */
 .car-number-split-wrapper { flex-wrap: nowrap; gap: 5px; }
 .car-number-split-wrapper .fixed-unit-button { width: 45px; font-size: var(--base-font-size); flex-grow: 0; }
 #carNumPart1 { max-width: none; flex: 2.5; }
@@ -501,30 +478,23 @@ margin-bottom: 0;
 #carNumPart2 { max-width: none; flex: 4; }
 .split-unit-wrapper input { min-width: 70px; }
 
-/* ✅ 면허 희망가격 모바일 최적화 (필드 너비 대폭 확장) */
-.unified-price-input { 
-    max-width: 100%; /* 모바일에서 가용 공간 최대로 활용 */
-    justify-content: center; /* 중앙 정렬 유지 */
-}
-.unified-price-input input { 
-    min-width: 100px; /* 최소 너비를 충분히 확보 */
-    flex-grow: 3; /* input 필드에 대부분의 공간을 할당 */
-    max-width: 200px; /* 최대 너비 설정 (4자리 입력 후 여유 공간 충분) */
-}
-
-
+/* 면허 희망가격 모바일 최적화 */
+.unified-price-input { max-width: 100%; }
+.unified-price-input .price-fixed-text,
+.unified-price-input .price-unit-text { font-size: 1.0em; padding: 0 3px; }
+.unified-price-input input { font-size: 1.1em; }
 /* 모바일 포커스 시 돋보기 크기 조정 */
 .data-input-field:focus {
-    font-size: 1.1em !important;
-    height: var(--base-field-height) !important;
-    line-height: var(--base-field-height) !important;
+font-size: 1.1em !important;
+height: var(--base-field-height) !important;
+line-height: var(--base-field-height) !important;
 }
 .unified-price-input input:focus {
-    font-size: 1.2em !important;
+font-size: 1.2em !important;
 }
-/* 모바일에서 완료된 필드 폰트 크기 조정 */
+/* ✅ 모바일에서 완료된 필드 폰트 크기 조정 */
 .data-input-field.completed {
-    font-size: 1.1em !important;
+font-size: 1.1em !important;
 }
 }
 </style>
@@ -560,6 +530,7 @@ target="hidden_iframe">
                         <span class="price-fixed-text">1억</span>
                         <input type="text"
                             id="licensePriceInput"
+                            name="license_price_display"
                             placeholder="숫자입력"
                             inputmode="numeric"
                             maxlength="4"
@@ -586,7 +557,7 @@ target="hidden_iframe">
             <div class="input-field-wrapper">
                 <input type="text"
                     id="name"
-                    name="entry.404085379" 
+                                        name="entry.404085379" 
                     required
                     placeholder="성함 입력" class="data-input-field">
             </div>
@@ -747,50 +718,28 @@ checkCompletion(this);
 });
 
 // ************************************************************
-// ✅ 로직 강화: submit 이벤트를 명시적으로 제어하여 데이터 누락 방지
+// ✅ 수정된 SUBMIT 이벤트 리스너 (데이터 누락 방지 로직 최종 적용)
 // ************************************************************
-
-// 폼의 최종 제출 이벤트 핸들러 (2단계 완료 시)
 document.getElementById('carForm').addEventListener('submit', function(event) {
     // 1. 폼의 기본 제출 동작을 즉시 막습니다.
     event.preventDefault(); 
 
-    // 🚀 2. 1단계 유효성 검사 (혹시 모를 우회 제출 방지)
+    // 🚀 2. 1단계 유효성 검사
     if (!validateStep1(true)) {
-        updateStep(1); 
+        updateStep(1); // 1단계로 돌아감
         alert('1단계 희망가격을 먼저 정확히 입력해주세요.');
         return;
     }
 
     // 🚀 3. 2단계 유효성 검사
     if (!validateStep2(true)) {
-        updateStep(2); 
+        updateStep(2); // 2단계로 돌아감
         // Alert은 validateStep2 내부에서 처리됨
         return;
     }
 
     // 🚀 4. 모든 검사 통과 후, 전송 직전에 Hidden 필드에 최종 값 설정
-    setHiddenFields();
     
-    // 5. 최종 제출 플래그 설정 후, 폼을 명시적으로 제출합니다.
-    submitted = true; 
-    this.submit(); 
-});
-
-
-// '다음 단계로' 버튼 클릭 시 Hidden 필드 값을 미리 설정 (1단계 완료 시)
-document.getElementById('nextBtn').addEventListener('click', function(event) {
-    event.preventDefault();
-
-    if (validateStep1(false)) {
-        // 1단계 유효성 검사 통과 시, 1단계 Hidden 필드만 미리 설정
-        licensePriceHidden.value = `1억 ${licensePriceInput.value.trim()}만원`;
-        updateStep(2);
-    }
-});
-
-
-function setHiddenFields() {
     // 4-1. 희망가격 Hidden 필드 값 설정 (1억 [숫자]만원 형식)
     licensePriceHidden.value = `1억 ${licensePriceInput.value.trim()}만원`;
 
@@ -806,7 +755,11 @@ function setHiddenFields() {
 
     // 4-4. 개인정보 동의 Hidden 필드 값 설정
     consentHidden.value = consentCheckbox.checked ? '예' : '아니오';
-}
+    
+    // 5. 최종 제출 플래그 설정 후, 폼을 명시적으로 제출합니다.
+    submitted = true; 
+    this.submit(); // 폼을 명시적으로 재전송 (Hidden Field에 값이 확실히 채워진 후)
+});
 
 
 function updateStep(step) {
@@ -825,8 +778,11 @@ window.scrollTo(0, 0);
 }
 
 function nextStep(step) {
-// 이 함수는 'nextBtn' 이벤트 리스너로 대체되었으나, HTML onclick 속성 유지를 위해 남겨둠.
-// 실제 로직은 위쪽 document.getElementById('nextBtn').addEventListener에서 처리됨.
+if (step === 1) {
+if (validateStep1(false)) {
+updateStep(2);
+}
+}
 }
 
 function prevStep(step) {
