--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>면허판매 희망가 등록 서비스</title>
+    <title>면허 판매 희망가 등록 서비스</title>
     
     <!-- Tailwind CSS CDN 로드 -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -71,7 +71,7 @@
             
             <!-- 설명 (간격 조정) -->
             <p id="description" class="text-red-600 text-center mb-4 text-lg font-semibold">
-                시세가 희망가 도달 전에 알려드립니다.
+                면허금액이 희망가 도달 시, 알려드립니다.
             </p>
         </header>
 
